<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{44469a28-03d3-42b1-b274-3d87aae2f87d}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	MAX_CSV_ROWS 			: UDINT := 100;
	MAX_CSV_COLUMNS 		: UDINT := 5;
	MAX_CSV_FIELD_LENGTH	: UDINT := 100;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>